@@ -9,19 +9,19 @@ record(waveform, "$(DEVICE):CBUF:PID")
     field(TSE,  "$(TSE)")
 }
 
-record(ao, "$(DEVICE):CBUF:AMPLTHREAD")
+record(ao, "$(DEVICE):CBUF:THREDTIME")
 {
     field(PINI, "YES")
-    field(DESC, "Amplitude Threshold")
+    field(DESC, "Threshold Time Jump")
     field(DTYP, "asynFloat64")
-    field(OUT,  "@asyn($(PORT),0) thredampl_fltbuf")
+    field(OUT,  "@asyn($(PORT),0) thredtime_fltbuf")
     field(SCAN, "Passive")
     field(OMSL, "supervisory")
-    field(EGU,  "")
+    field(EGU,  "ps")
     info(autosaveFields, "VAL")
 }
 
-record(ao, "$(DEVICE):CBUF:CLEAR")
+record(bo, "$(DEVICE):CBUF:CLEAR")
 {
     field(DESC, "Clear circular buffers")
     field(DTYP, "asynInt32")
@@ -32,3 +32,20 @@ record(ao, "$(DEVICE):CBUF:CLEAR")
     field(ONAM, "CLEAR")
 }
 
+record(bi, "$(DEVICE):CBUF:STATUS")
+{
+    field(DESC, "Status of circular buffers")
+    field(DTYP, "asynInt32")
+    field(INP,  "@asyn($(PORT),0) fltBuf_status")
+    field(SCAN, "I/O Intr")
+    field(ZNAM, "Stop")
+    field(ONAM, "Inprogress")
+}
+
+record(longin, "$(DEVICE):CBUF:WRTPT")
+{
+    field(DESC, "Writing Point of circular buffers")
+    field(DTYP, "asynInt32")
+    field(INP,  "@asyn($(PORT),0) fltBuf_wrtpt")
+    field(SCAN, "I/O Intr")
+}
