@@ -1,5 +1,6 @@
-R1.7.2      04-23-2021    Kukhee Kim (khkim)
-                        - add ring buffer to record fault or unexpected phase jump (arriaval time jump)
+R1.7.2      04-28-2021    Kukhee Kim (khkim)
+                        - add circular buffer to record fault or unexpected phase jump (arriaval time jump)
+                        - add status PV for the circular buffers
 
 R1.7.1      03-04-2021    Kukhee Kim (khkim)
                         - add BSA channels for reference phase and 4 probes
